--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
     "name": "node-api",
     "main": "server.js",
+    "scripts": {
+      "dev": "nodemon server.js"
+    },
     "dependencies": {
         "body-parser": "~1.0.1",
         "express": "~4.0.0",
         "mongojs": "^2.4.1",
         "mongoose": "~3.6.13"
+    },
+    "devDependencies": {
+        "nodemon": "^1.12.6"
     }
 }
