--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "node-api",
     "main": "server.js",
     "scripts": {
-      "dev": "nodemon server.js"
+        "dev": "nodemon server.js"
     },
     "dependencies": {
         "body-parser": "~1.0.1",
+        "cors": "^2.8.4",
         "express": "~4.0.0",
         "mongojs": "^2.4.1",
         "mongoose": "~3.6.13"
