--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "node-api",
     "main": "server.js",
     "scripts": {
-        "dev": "nodemon server.js"
+        "dev": "nodemon server.js",
+        "test": "mocha --exit --timeout 10000"
     },
     "dependencies": {
         "body-parser": "~1.0.1",
@@ -12,6 +13,9 @@
         "mongoose": "~3.6.13"
     },
     "devDependencies": {
+        "chai": "^4.1.2",
+        "chai-http": "^4.0.0",
+        "mocha": "^5.2.0",
         "nodemon": "^1.12.6"
     }
 }
