--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "body-parser": "~1.0.1",
         "cors": "^2.8.4",
         "express": "~4.0.0",
+        "moment": "^2.22.2",
         "mongojs": "^2.4.1",
         "mongoose": "~3.6.13"
     },
