--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
     "main": "server.js",
     "scripts": {
         "dev": "nodemon server.js",
-        "test": "mocha --exit --timeout 10000"
+        "test": "mocha --exit --timeout 10000",
+        "lint": "./node_modules/.bin/eslint ."
     },
     "dependencies": {
         "body-parser": "~1.0.1",
         "cors": "^2.8.4",
         "express": "~4.0.0",
         "moment": "^2.22.2",
+        "mongodb": "^3.1.3",
         "mongojs": "^2.4.1",
         "mongoose": "~3.6.13"
     },
     "devDependencies": {
+        "babel-eslint": "^8.2.6",
+        "boom": "^7.2.0",
         "chai": "^4.1.2",
         "chai-http": "^4.0.0",
+        "eslint": "^5.4.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsx-a11y": "^6.1.1",
+        "eslint-plugin-react": "^7.11.1",
         "mocha": "^5.2.0",
         "nodemon": "^1.12.6"
     }
