--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "lint": "./node_modules/.bin/eslint ."
     },
     "dependencies": {
+        "bcrypt": "^3.0.0",
         "body-parser": "~1.0.1",
         "cors": "^2.8.4",
         "express": "~4.0.0",
