--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "body-parser": "~1.0.1",
         "cors": "^2.8.4",
         "express": "~4.0.0",
+        "jsonwebtoken": "^8.3.0",
         "moment": "^2.22.2",
         "mongodb": "^3.1.3",
         "mongojs": "^2.4.1",
