--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "main": "server.js",
     "scripts": {
         "dev": "nodemon server.js",
-        "test": "mocha --exit --timeout 10000", 
+        "test": "mocha --exit --timeout 10000",
         "lint": "./node_modules/.bin/eslint ."
     },
     "dependencies": {
@@ -11,11 +11,14 @@
         "body-parser": "~1.0.1",
         "cors": "^2.8.4",
         "express": "~4.0.0",
+        "express-winston": "^3.0.0",
         "jsonwebtoken": "^8.3.0",
         "moment": "^2.22.2",
         "mongodb": "^3.1.3",
         "mongojs": "^2.4.1",
-        "mongoose": "~3.6.13"
+        "mongoose": "~3.6.13",
+        "morgan": "^1.9.1",
+        "winston": "^3.1.0"
     },
     "devDependencies": {
         "babel-eslint": "^8.2.6",
