--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "node-api",
     "main": "server.js",
     "scripts": {
-        "dev": "nodemon server.js",
+        "dev": "nodemon server.js", // how to use dev db when no tests running?
         "test": "mocha --exit --timeout 10000",
         "lint": "./node_modules/.bin/eslint ."
     },
@@ -10,6 +10,7 @@
         "bcrypt": "^3.0.0",
         "body-parser": "~1.0.1",
         "cors": "^2.8.4",
+        "dotenv": "^6.1.0",
         "express": "~4.0.0",
         "express-winston": "^3.0.0",
         "jsonwebtoken": "^8.3.0",
