--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
     "name": "node-api",
     "main": "server.js",
     "scripts": {
-        "dev": "nodemon server.js", // how to use dev db when no tests running?
-        "test": "mocha --exit --timeout 10000",
+        "dev": "NODE_CONFIG_ENV=development nodemon server.js",
+        "test": "NODE_CONFIG_ENV=test mocha --exit --timeout 10000",
         "lint": "./node_modules/.bin/eslint ."
     },
     "dependencies": {
         "bcrypt": "^3.0.0",
         "body-parser": "~1.0.1",
+        "config": "^2.0.1",
         "cors": "^2.8.4",
         "dotenv": "^6.1.0",
         "express": "~4.0.0",
